test/files/tokenizer/errors/eof-string.otest
name = "End of file in string"
line = 2
character = 14
error = "Expected closing double quotation mark."

---

"this is a te